# Weather-rust-dashboard

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  img
src/: app.rs  data.rs  main.rs  telemetry.rs
src/ui/: dashboard.rs  mod.rs
src/ui/widgets/: mod.rs  weather.rs
